[Polyam] Fix collapsed posts background color
Port 369e72853639ab23e1eef5d71734e00bca568bb9 to polyam-glitch

--- a/app/javascript/flavours/polyam/styles/components/status.scss
+++ b/app/javascript/flavours/polyam/styles/components/status.scss
@@ -273,10 +273,7 @@
         bottom: 0;
         inset-inline-start: 0;
         inset-inline-end: 0;
-        background: linear-gradient(
-          rgba($ui-base-color, 0),
-          rgba($ui-base-color, 1)
-        );
+        background: linear-gradient(transparent, var(--background-color));
         pointer-events: none;
       }
 
